[package]
name = "ppmitzador"
version = "0.1.0"
edition = "2021"
authors = ["Amat Gil <amatgilvinyes@gmail.com>"]
description = "A very simple library to save in the Netpbm format"
repository = "https://git.ilsrv.com/Amat/ppmitzador"
license = "GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
